fix: wrap transaction description

--- a/frontend/src/app/features/transactions/transactions.component.scss
+++ b/frontend/src/app/features/transactions/transactions.component.scss
@@ -105,9 +105,8 @@
 
     span {
         flex: 1;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        overflow-wrap: break-word;
+        word-break: break-word;
     }
 
     .matcher-icon-small {
