--- a/frontend/src/app/features/unprocessed-transactions/unprocessed-transactions.component.scss
+++ b/frontend/src/app/features/unprocessed-transactions/unprocessed-transactions.component.scss
@@ -45,4 +45,10 @@
             background-color: rgba(0, 0, 0, 0.04);
         }
     }
+
+    .mat-column-description {
+        overflow-wrap: break-word;
+        word-break: break-word;
+        min-width: 200px;
+    }
 }
